@@ -1,0 +1,22 @@
+#!/usr/bin/env perl
+
+use strict;
+use warnings;
+
+use Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::InstanceOf::Human;
+use Wikibase::Datatype::Print::Statement;
+
+# Object.
+my $obj = Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::InstanceOf::Human->new;
+
+# Print out.
+print scalar Wikibase::Datatype::Print::Statement::print($obj);
+
+# Output:
+# P31: Q5 (normal)
+# References:
+#   {
+#     P248: Q53919
+#     P214: 113230702
+#     P813: 7 December 2013 (Q1985727)
+#   }
